# SpaceReader

./: .gitignore  SpaceReader.sln
SpaceReader/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Config.h  Edge.cpp  Edge.h  Front.cpp  Front.h  GLRenderSystem.cpp  GLRenderSystem.h  GLWindow.cpp  GLWindow.h  Helper.cpp  Helper.h  KinectSensor.cpp  KinectSensor.h  KinectSensorMock.cpp  KinectSensorMock.h  KinectView.cpp  KinectView.h  MathUtils.cpp  MathUtils.h  Pivoter.cpp  Pivoter.h  SpaceReader.cpp  SpaceReader.vcxproj  SpaceReader.vcxproj.filters  TriView.cpp  TriView.h  Triangle.cpp  Triangle.h  Triangulation.cpp  Triangulation.h  View.cpp  View.h  Viewport.cpp  Viewport.h  (+1 more)
